Task2 added image zoom and fixed scaling border overflow

--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -21,6 +21,7 @@
     gap: 30px;
     text-align: center;
     margin: 20px 0px;
+    padding: 5px 5px;
     overflow: scroll;
 }
 
@@ -33,7 +34,13 @@
     min-width: 80px;
     cursor: pointer;
     border-radius: 50%;
-    transition: 0.2s;
+    transition: transform 0.2s ease;
+}
+
+@media (hover: hover) and (pointer: fine){
+    .explore-menu-list-item img:hover{
+        transform: scale(1.08);
+    }
 }
 
 .explore-menu-list-item p{
